testdata/test/resources/com/yafred/asn1/test/should_fail/choice_undistinct_tagging_nested2.asn
-- FAIL
Choices DEFINITIONS ::=
BEGIN

A ::= SET {

	un INTEGER,
	deux IA5String,
	c CHOICE {
	   trois INTEGER,  -- duplicate tag
	   quatre IA5String  -- duplicate tag
	}

}

END
